--- a/Join/View/Personal/PersonBasicCell.xib
+++ b/Join/View/Personal/PersonBasicCell.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -41,7 +42,9 @@
                                         <rect key="frame" x="0.0" y="0.0" width="106" height="35.5"/>
                                         <inset key="contentEdgeInsets" minX="16" minY="6" maxX="16" maxY="6"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="加為好友"/>
+                                        <state key="normal" title="加為好友">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
                                         <connections>
                                             <action selector="changeRelationship:" destination="gTV-IL-0wX" eventType="touchUpInside" id="eyF-Zb-Fkf"/>
                                         </connections>
@@ -80,5 +83,8 @@
     </objects>
     <resources>
         <image name="paperplane" catalog="system" width="128" height="118"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
