--- a/Join/View/Base.lproj/Main.storyboard
+++ b/Join/View/Base.lproj/Main.storyboard
@@ -17,9 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gys-rA-fxC">
-                                <rect key="frame" x="118" y="490" width="179" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gys-rA-fxC">
+                                <rect key="frame" x="117.5" y="490" width="179" height="39"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -28,9 +27,8 @@
                                     <action selector="chooseYiChen:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="LIx-cs-74I"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckf-uB-PJB">
-                                <rect key="frame" x="118" y="370" width="179" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckf-uB-PJB">
+                                <rect key="frame" x="117.5" y="370" width="179" height="39"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -42,6 +40,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hFF-GX-KZx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ckf-uB-PJB" firstAttribute="top" secondItem="hFF-GX-KZx" secondAttribute="top" constant="326" id="7Om-zh-yOO"/>
+                            <constraint firstItem="Gys-rA-fxC" firstAttribute="top" secondItem="Ckf-uB-PJB" secondAttribute="bottom" constant="81" id="ZgJ-j2-fab"/>
+                            <constraint firstItem="Gys-rA-fxC" firstAttribute="centerX" secondItem="x7i-qJ-YkP" secondAttribute="centerX" id="qAq-y9-KV1"/>
+                            <constraint firstItem="Ckf-uB-PJB" firstAttribute="centerX" secondItem="x7i-qJ-YkP" secondAttribute="centerX" id="wyv-Uo-KCn"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="AWW-iZ-ttW" kind="show" identifier="GoToMainPage" id="A9e-Bt-MQk"/>
