--- a/Join/View/Base.lproj/Main.storyboard
+++ b/Join/View/Base.lproj/Main.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gys-rA-fxC">
-                                <rect key="frame" x="85" y="494" width="244" height="39"/>
+                                <rect key="frame" x="61" y="494" width="292" height="39"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="以 Some One 的身份登入"/>
+                                <state key="normal" title="以 Potential Friend 的身份登入"/>
                                 <connections>
-                                    <action selector="chooseOther:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="5it-md-XMt"/>
+                                    <action selector="choosePotentialFriend:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="bzv-fi-fD1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckf-uB-PJB">
@@ -35,6 +35,17 @@
                                 <state key="normal" title="以大琪的身份登入"/>
                                 <connections>
                                     <action selector="chooseRiley:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="zYi-4v-V6f"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvs-K2-f4a">
+                                <rect key="frame" x="88" y="609" width="239" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="以 Passenger的身份登入"/>
+                                <connections>
+                                    <action selector="choosePassenger:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="9FS-8c-IIq"/>
                                 </connections>
                             </button>
                         </subviews>
