--- a/Join/View/Personal.storyboard
+++ b/Join/View/Personal.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -106,6 +107,82 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X09-Pe-flI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2893" y="1639"/>
+        </scene>
+        <!--My Posts View Controller-->
+        <scene sceneID="5oY-uv-mZE">
+            <objects>
+                <viewController storyboardIdentifier="MyPostsViewController" id="qUx-06-ii5" customClass="MyPostsViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gsO-4d-b7B">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="I1h-ex-4kt">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oK6-Ok-ixX">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="7v8-gU-kj5">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1yK-fN-kMd">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="UNt-HH-0sS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UNt-HH-0sS" firstAttribute="trailing" secondItem="I1h-ex-4kt" secondAttribute="trailing" id="MhH-5q-Kd7"/>
+                            <constraint firstAttribute="bottom" secondItem="I1h-ex-4kt" secondAttribute="bottom" id="P6b-Z4-52j"/>
+                            <constraint firstItem="I1h-ex-4kt" firstAttribute="leading" secondItem="UNt-HH-0sS" secondAttribute="leading" id="a1C-7S-nhe"/>
+                            <constraint firstItem="I1h-ex-4kt" firstAttribute="top" secondItem="gsO-4d-b7B" secondAttribute="top" id="cNC-wg-gXf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="I1h-ex-4kt" id="zVv-3v-ZhT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vx0-8A-R1Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3690" y="1639"/>
+        </scene>
+        <!--My Posts Detail View Controller-->
+        <scene sceneID="XhD-TD-Kai">
+            <objects>
+                <viewController storyboardIdentifier="MyPostsDetailViewController" id="rDi-sm-bMI" customClass="MyPostsDetailViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yY2-Qp-FaQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9ul-MI-S14">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="6XC-wI-rbf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9ul-MI-S14" firstAttribute="top" secondItem="yY2-Qp-FaQ" secondAttribute="top" id="MEr-1u-WxX"/>
+                            <constraint firstItem="9ul-MI-S14" firstAttribute="leading" secondItem="6XC-wI-rbf" secondAttribute="leading" id="XNz-o6-Ykv"/>
+                            <constraint firstItem="6XC-wI-rbf" firstAttribute="trailing" secondItem="9ul-MI-S14" secondAttribute="trailing" id="f4A-xB-wuN"/>
+                            <constraint firstAttribute="bottom" secondItem="9ul-MI-S14" secondAttribute="bottom" id="uhD-WP-zgx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="9ul-MI-S14" id="Snq-fE-3rT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1x9-qM-vIn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4494" y="1639"/>
         </scene>
         <!--Others Profile View Controller-->
         <scene sceneID="MqC-HL-7v4">
