feat: get all my application records

--- a/Join/View/FindIdeas.storyboard
+++ b/Join/View/FindIdeas.storyboard
@@ -63,7 +63,7 @@
         <!--Project Details View Controller-->
         <scene sceneID="WWk-6t-3yk">
             <objects>
-                <viewController id="KA7-7l-jFw" customClass="ProjectDetailsViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProjectDetailsViewController" id="KA7-7l-jFw" customClass="ProjectDetailsViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O0i-EN-eLU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
