--- a/Join/View/Personal/FriendsList/FriendCell.xib
+++ b/Join/View/Personal/FriendsList/FriendCell.xib
@@ -30,10 +30,19 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5fQ-c7-if4">
+                        <rect key="frame" x="278" y="22.5" width="26" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="26" id="5tC-wU-YnP"/>
+                            <constraint firstAttribute="width" secondItem="5fQ-c7-if4" secondAttribute="height" multiplier="1:1" id="HzS-19-IDF"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="5fQ-c7-if4" secondAttribute="trailing" constant="16" id="3La-Ru-zay"/>
                     <constraint firstItem="c45-Of-nKD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4qd-mz-N8S"/>
                     <constraint firstItem="c45-Of-nKD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8j8-Q7-T8i"/>
+                    <constraint firstItem="5fQ-c7-if4" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SW7-Qq-tgF"/>
                     <constraint firstItem="IHi-92-1uy" firstAttribute="leading" secondItem="c45-Of-nKD" secondAttribute="trailing" constant="8" id="eEI-FF-brT"/>
                     <constraint firstItem="IHi-92-1uy" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zSU-kM-eyS"/>
                 </constraints>
@@ -41,9 +50,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameLabel" destination="IHi-92-1uy" id="Wfl-7n-EVQ"/>
+                <outlet property="selectImageView" destination="5fQ-c7-if4" id="9GH-TA-vuO"/>
                 <outlet property="thumbnailImageView" destination="c45-Of-nKD" id="Cad-QU-6pI"/>
             </connections>
             <point key="canvasLocation" x="140.57971014492756" y="89.732142857142847"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="checkmark.circle" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
